# testing-101

001-DI & DIP/: after.py  before.py
002-mocking/: after.py  app.py  before.py  learn.py
003-pytest/pytest_learn/: pyproject.toml  test.db
003-pytest/pytest_learn/pytest_learn/: main.py
003-pytest/pytest_learn/tests/: test_app.py  test_learn.py
004-BDD/learn_pytest/: pyproject.toml  test.db
004-BDD/learn_pytest/learn_pytest/: main.py
004-BDD/learn_pytest/tests/: test_something.py
005-DI-Container/: pyproject.toml
005-DI-Container/src/: app.py
006-Parametrized/app/: main.py
006-Parametrized/tests/: test_app.py
